resources/assets/sass/pages/_list.scss
.list-page-title {
    margin-top: 20px;
}

#list-container {
    margin-top: 30px;
    padding: 0;

    .packed {
        margin-top: 50px;
    }

    .packing-list {
        padding: 0;
    }

    ul {
        list-style-type: none;
        list-style-position: none;
    }

    .confirm-delete {
        display: flex;
        justify-content: flex-end;

        margin-bottom: 5px;
    }

    .confirm-delete-copy {
        margin-right: 2rem;
        padding-top: 0.25rem;
    }

    .new-item-form {
        width: 100%;
    }

    .checked-item {
        display: inline-block;
    }

    .checkbox-holder {
        height: 100%;
    }

    .unpacked .check {
        position: relative;
        top: 3px;
    }

    .already-packed .item {
        height: 24px;
    }

    .item-name {
        font-size: 18px;
        height: auto;
        padding: 2px 4px;
        width: 100%;
    }

    .item-icon-holder {
        padding-top: 5px;
    }

    .delete-icon {
        opacity: 0.3;

        &:hover {
            opacity: 0.75;
        }
    }
}

.packing-finished {
    padding: 20px 20px;
    background-color: #c3ffc9;
    width: 100%;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.no-packed-message {
    padding-left: 25px;
}

